fix: fixed margins on smaller screens

--- a/src/components/HomePageFolder/HomePage.css
+++ b/src/components/HomePageFolder/HomePage.css
@@ -5,7 +5,7 @@ hr {
 }
 
 #about img {
-  border-radius: .4rem;
+  /* border-radius: .4rem; */
 }
 
 .primary-font-color {
